package multithreading.addersubtractor2locks;

public class Variable {
    int x;
}
