@startuml

title __ADDERSUBTRACTOR2LOCKS's Class Diagram__\n

  namespace  {
    namespace ultithreading.addersubtractor2locks {
      class multithreading.addersubtractor2locks.Adder {
          ~ lock : Lock
          + call()
          ~ Adder()
      }
    }
  }
  

  namespace  {
    namespace ultithreading.addersubtractor2locks {
      class multithreading.addersubtractor2locks.Main {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ultithreading.addersubtractor2locks {
      class multithreading.addersubtractor2locks.Subtractor {
          ~ lock : Lock
          + call()
          ~ Subtractor()
      }
    }
  }
  

  namespace  {
    namespace ultithreading.addersubtractor2locks {
      class multithreading.addersubtractor2locks.Variable {
          ~ x : int
      }
    }
  }
  

  multithreading.addersubtractor2locks.Adder .up.|> java.util.concurrent.Callable
  multithreading.addersubtractor2locks.Adder o-- multithreading.addersubtractor2locks.Variable : v
  multithreading.addersubtractor2locks.Subtractor .up.|> java.util.concurrent.Callable
  multithreading.addersubtractor2locks.Subtractor o-- multithreading.addersubtractor2locks.Variable : v


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
